fix height problem and update bio

--- a/src/editable-stuff/configurations.json
+++ b/src/editable-stuff/configurations.json
@@ -25,7 +25,7 @@
   "instaLink": "https://www.instagram.com/",
   "instaUsername": "hashirshoaeb",
   "instaQuerry": "/?__a=1",
-  "aboutDescription": "I'm an informatics student who has a passion for creating UI's and web applications. I spent summer 2020 interning at interview board a start up used to improve the remote interview process.",
+  "aboutDescription": "I'm a web developer studying informatics. I spent summer 2020 interning at InterviewBoard, a start up focused on improving the remote hiring experience.",
   "projectHeading": "Recent Projects",
   "gitHubLink": "https://api.github.com/users/",
   "gitHubUsername": "zach-fearnow",
